<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wsip_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/user_name"
        style="@style/loginActivityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usernameHint"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        android:textColor="@color/Wsip_base_color"
        tools:text="Username"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/user_password"
        style="@style/loginActivityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        android:textColor="@color/Wsip_base_color"
        tools:text="Password"
        android:maxLines="1"/>


    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/remeber_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basePadding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_password" />

    <TextView
        app:layout_constraintLeft_toRightOf="@+id/remeber_me"
        app:layout_constraintBaseline_toBaselineOf="@id/remeber_me"
        android:text="@string/remeber_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/progressLayout"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/login_in"
        app:layout_constraintTop_toBottomOf="@id/remeber_me"
        android:layout_margin="20dp">

        <com.rey.material.widget.ProgressView
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:pv_autostart="true"
            app:pv_circular="true"
            app:pv_progressStyle="@style/CustomProgressStyle"
            app:pv_progressMode="indeterminate"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:indeterminate="false"/>

        <TextView
            android:id="@+id/progressInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in_progress"
            android:textAlignment="center"
            android:textColor="@color/progressInfoColor"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"/>

    </android.support.constraint.ConstraintLayout>


    <Button
        android:text="@string/login_in"
        android:background="@color/Wsip_base_color"
        android:id="@+id/login_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>